[gd_scene load_steps=2 format=3 uid="uid://cxgs2libsv358"]

[ext_resource type="Script" path="res://editors/pf/eV4.gd" id="1_1d0pm"]

[node name="String" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_1d0pm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Subtitle"
text = "Name"

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Subtitle"
theme_override_colors/font_color = Color(0.963534, 0, 0.360486, 1)
text = "f"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"buttonBacking"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
step = -0.1
allow_greater = true
allow_lesser = true

[node name="LineEdit2" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
step = -0.1
allow_greater = true
allow_lesser = true

[node name="LineEdit3" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
step = -0.1
allow_greater = true
allow_lesser = true

[node name="LineEdit4" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
step = -0.1
allow_greater = true
allow_lesser = true

[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit2" to="." method="_on_line_edit_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit3" to="." method="_on_line_edit_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit4" to="." method="_on_line_edit_value_changed"]
